# Partition

./: .gitignore  .gitmodules  CMakeLists.txt  Partition.sln  README.md  bitbucket-pipelines.yml  partition.config.json
DetailMapping/: DetailMapping.vcxproj  DetailMapping.vcxproj.filters
DetailMapping/src/: main.cpp
Engine/: Engine.vcxproj  Engine.vcxproj.filters
Engine/include/Application/: Global.h  MainLoop.inc  ResourceDatabase.h  ResourceDatabaseTypes.h
Engine/include/Component/: render_data_t.h  transform_t.h
Engine/include/Graphics/: CBuffer.h  DirectX.h  MeshLoadUtil.h  ProjectionMatrix.h  TextureLoadUtil.h  Uniform.h  Window.h
Engine/include/IO/: FileUtil.h  PathUtil.h
Engine/include/Input/: Input.h
Engine/include/UI/: EditorUI.h  UIUtil.h
Engine/include/Utilities/: Math.h  Memory.h  UtilityTypes.h  frame_string.h
Engine/include/imgui/: imgui.h  imgui_internal.h
Engine/lib/x64/Debug/: assimp.lib
Engine/lib/x64/Release/: assimp.lib
Engine/src/Application/: Global.cpp  ResourceDatabase.cpp
Engine/src/Component/: transform_t.cpp
Engine/src/Graphics/: DirectX.cpp  MeshLoadUtil.cpp  TextureLoadUtil.cpp  Window.cpp
Engine/src/IO/: FileUtil.cpp
Engine/src/Input/: Input.cpp
Engine/src/UI/: EditorUI.cpp  UIUtil.cpp
Engine/src/Utilities/: Logging.cpp  Math.cpp  Profile.cpp  UtilityTypes.cpp
Engine/src/imgui/: imgui.cpp  imgui_draw.cpp
ImageEffect/: ImageEffect.vcxproj
MathUnitTest/: MathUnitTest.vcxproj  MathUnitTest.vcxproj.filters  floattest.cpp  mat4test.cpp  quaterniontest.cpp  vec2ftest.cpp  vec3ftest.cpp
MemoryUnitTest/: MemoryUnitTest.vcxproj  MemoryUnitTest.vcxproj.filters  basic_frame_string_test.cpp  linear_allocator_test.cpp  pool_allocator_test.cpp  stdafx.cpp
Resources/: GlobalConstants.hlsli  basic.hlsl  basic_ps.cso  basic_ps.hlsl  basic_vs.cso  basic_vs.hlsl  cube_family.3ds  cube_family.blend  cube_family.dae  cube_family.fbx  cube_family.mtl  monkey.fbx  normal_map.hlsl  plane.fbx  torus.fbx  water.fbx  water.hlsl  water_ps.cso  water_ps.hlsl  water_vs.cso  water_vs.hlsl
Test/: Test.vcxproj  Test.vcxproj.filters
Test/resource/: ps.cso  ps.hlsl  vs.cso  vs.hlsl
Test/src/: main.cpp
WaterSim/: WaterSim.vcxproj  log.txt
WaterSim/resource/: ps.cso  ps.hlsl  vs.cso  vs.hlsl  water.fbx
WaterSim/src/: main.cpp
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt  DeferredRendering.cpp  Deflate.cpp  DetailMapping.cpp  ImageEffect.cpp  TiledDeferred_dx12.cpp  WaterSim.cpp
protogame/: CMakeLists.txt  main.cpp
resources/: DeferredShading.hlsli  GlobalConstants.hlsli  ShaderStructs.hlsli  ShaderUtil.hlsli  debug_draw.hlsl  deferred_env_lighting.hlsl  deferred_lighting.hlsl  gbuffer_fill.hlsl  image_effect.hlsl  monkey.fbx  reflection_sphere.fbx  render_cubemap.hlsl  round_sphere.fbx  simple_texture.hlsl  sphere.fbx  water.hlsl
resources/cubemap/: earth-cubemap.dds
resources/mesh/: cube.ogex  cubemap.fbx  plane.fbx  reflection_sphere.fbx
resources/shader/: DeferredShading.hlsli  GlobalConstants.hlsli  ShaderStructs.hlsli  basic.hlsl  debug_draw.hlsl  deferred_env_lighting.hlsl  deferred_lighting.hlsl  dx12_basic.hlsl  gbuffer_fill.hlsl  normal_map.hlsl
src/: CMakeLists.txt
src/Application/: Global.cpp  Global.h  MainLoop.inc  ResourceDatabase.cpp  ResourceDatabase.h
src/Component/: render_data_t.cpp  transform_t.cpp  transform_t.h
src/Graphics/: CBuffer.h  DebugDraw.cpp  DebugDraw.h  DirectX.cpp  DirectX.h  GBuffer.cpp  GBuffer.h  Lighting.h  MeshLoadUtil.cpp  MeshLoadUtil.h  RenderSystem.cpp  RenderSystem.h  TextureLoadUtil.cpp  TextureLoadUtil.h  Window.cpp  Window.h
src/IO/: PathUtil.cpp
src/Input/: Input.cpp  Input.h
src/System/: Flycam.cpp  Flycam.h
src/UI/: EditStruct.h  EditorUI.cpp  EditorUI.h  UIUtil.cpp  UIUtil.h
src/Utilities/: JsonUtil.h  Logging.cpp  Logging.h  Math.cpp  Math.h  Profile.cpp  Profile.h  UtilityTypes.h
src/imgui/: imconfig.h  imgui.cpp  imgui_demo.cpp  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_internal.h
tests/: CMakeLists.txt
tests/math/: floattest.cpp  mat4test.cpp  quaterniontest.cpp  vec2ftest.cpp  vec3ftest.cpp
tests/memory/: basic_frame_string_test.cpp  linear_allocator_test.cpp  pool_allocator_test.cpp
