
SET(${CXX_STANDARD_REQUIRED} ON)

LINK_DIRECTORIES(../dll/x64/Release)
LINK_DIRECTORIES("C:/Program Files (x86)/Windows Kits/10/Lib/10.0.16299.0/um/x64")

INCLUDE_DIRECTORIES(../dependencies)
INCLUDE_DIRECTORIES(../src)

ADD_EXECUTABLE(DetailMapping WIN32 DetailMapping.cpp)
TARGET_LINK_LIBRARIES(DetailMapping partition)
SET_PROPERTY(TARGET DetailMapping PROPERTY CXX_STANDARD 17)

ADD_EXECUTABLE(WaterSim WIN32 WaterSim.cpp)
TARGET_LINK_LIBRARIES(WaterSim partition) 
SET_PROPERTY(TARGET WaterSim PROPERTY CXX_STANDARD 17)
