file(GLOB_RECURSE ENGINE_SOURCE *.cpp)
file(GLOB_RECURSE ENGINE_HEADERS *.h)

GroupSources(src)

INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(../dependencies/)
LINK_DIRECTORIES(../dll/)

SET(PARTITION_DEPENDENCIES
	directXTK 
	assimp 
	dxguid 
	d3dcompiler 
	dxgi 
	d3d11
)

SET(${CXX_STANDARD_REQUIRED} ON)
ADD_LIBRARY(Partition ${ENGINE_SOURCE} ${ENGINE_HEADERS})
TARGET_LINK_LIBRARIES(Partition PUBLIC ${PARTITION_DEPENDENCIES})
SET_PROPERTY(TARGET Partition PROPERTY CXX_STANDARD 17)